Fix some z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .quilt[fullscreen] .quilt-inner {
     position: fixed;
+    z-index: 999;
     display: table;
     width: 100%;
     height: 100%;
@@ -229,7 +230,9 @@ body[fullscreen-quilt] .fullscreen-quilt {
     max-width: 910px;
     margin: 70px auto 0;
     padding: 30px 20px 20px;
-    background: #222
+    background: #222;
+    position: relative;
+    z-index: -1;
 }
 .app h3 {
     color: #f6f6f6
@@ -259,6 +262,7 @@ body[fullscreen-quilt] .fullscreen-quilt {
 }
 .video-container iframe {
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 101%;
